--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "reset-css": "^5.0.2"
+    "reset-css": "^5.0.2",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
