--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.89.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
