--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4.1.11",
     "lucide-react": "^0.522.0",
+    "material-icons": "^1.13.14",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
